--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>DevTeens</title>
+    <title>Technological Development Team
+
+</title>
 </head>
 <body>
 
@@ -106,4 +108,5 @@
 
 
 </body>
+
 </html>
