--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Technological Development Team
-
-</title>
+    <title>DevTeens</title>
 </head>
 <body>
 
@@ -108,5 +106,4 @@
 
 
 </body>
-
 </html>
