--- a/index.html
+++ b/index.html
@@ -90,10 +90,17 @@
 
 
     <div class="testimonial-card">
-      <P>
-         تتقدّم جماعة التطوير التكنولوجي بخالص الشكر والتقدير للمُعلمة الفاضلة أ/ياسيمن خليل على دعمها الدائم وتشجيعها المستمر
-         فكانت دائمًا مصدر الإلهام والدافع لنجاح الجماعة وتقدّمها.
-         دمتم لنا قدوة في الإبداع والعطاء. 💜💻</p>
+      <P>تتقدّم جماعة التطوير التكنولوجي بخالص الشكر والتقدير للمُعلمة الفاضلة أ/ياسمين خليل،
+على جهودها الكبيرة ودعمها المستمر لينا في كل خطوة.
+كانت دايمًا أول من يؤمن بقدرتنا، وبتفتح لينا الباب نشارك في التدريبات والمسابقات،
+وتدينا فرصة نثبت نفسنا ونطوّر من مهاراتنا في مجال التكنولوجيا.
+
+وجود حضرتك كان دايمًا سبب في إن كل واحد فينا يتعلّم حاجة جديدة،
+مش بس في المجال التقني، لكن كمان في التعاون، التنظيم، وتحمل المسؤولية.
+ومن غير دعمك وتشجيعك، مكنّاش قدرنا نوصل للمستوى ده ولا نحقق النجاحات اللي فخورين بيها النهارده.
+
+فكل الشكر والامتنان ليكي يا ميس على تعبك ومجهودك،
+ودايماً هنفضل نحاول نكون عند حسن ظنك ونكمل المشوار بنفس الحماس والإصرار اللي اتعلمناه منك. 💜💻</p>
       <h4> جماعة التطوير التكنولوجي </h4>
   </div>
 </section>
