--- a/index.html
+++ b/index.html
@@ -84,6 +84,53 @@
 </section>
 
 
+
+<section class="gallery-container">
+    <h2> صور جماعةالتطوير</h2>
+    <p>لحظات من عملنا ومغامراتنا معاً!</p>
+
+    <div class="photo-grid">
+        <div class="photo-item"> 
+            <img src="images/IMG-20251010-WA0034.jpg" alt="  جماعةالتطوير ">
+        </div>
+
+        <div class="photo-item">
+            <img src="images/IMG-20251013-WA0110.jpg" alt=" جماعةالتطوير  ">
+        </div>
+
+        <div class="photo-item">
+            <img src="images/IMG-20251014-WA0114.jpg" alt=" جماعةالتطوير">
+        </div>
+
+        <div class="photo-item">
+            <img src="images/IMG-20251013-WA0112.jpg" alt="جماعةالتطوير">
+        </div>
+
+        <div class="photo-item">
+            <img src="images/IMG-20251010-WA0035.jpg" alt="جماعةالتطوير>">
+        </div>
+
+        <div class="photo-item">
+            <img src="images/IMG-20251002-WA0077.jpg" alt="جماعةالتطوير>">
+        </div>
+
+        <div class="photo-item">
+            <img src="images/IMG-20251013-WA0115.jpg" alt="جماعةالتطوير>">
+        </div>
+
+        <div class="photo-item">
+            <img src="images/IMG-20251016-WA0025.jpg" alt="جماعةالتطوير>">
+        </div>
+
+        <div class="photo-item">
+            <img src="images/WhatsApp Image 2025-10-16 at 16.47.04_2abc062e.jpg" alt="جماعةالتطوير>">
+        </div>
+
+</section>
+
+
+
+
 <section class="testimonials" id="كلمة من الجماعة">
   <h2>كلمة من الجماعة</h2>
   <div class="testimonials-content">
@@ -104,6 +151,10 @@
       <h4> جماعة التطوير التكنولوجي </h4>
   </div>
 </section>
+
+
+
+
 
 
 
