--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <img src="images/ISEF.jpg" alt="يوم الايسف ">
             </div>
             <div class="info">
-                <h3>الأيسف 2024</h3>
+                <h3>ISEF 2024</h3>
                 <p> في المسابقة كانت مدرسة احمد زويل اكبر عدد من حيث الطلاب والمشاريع كانت مدرسة احمد زويل مشاركه في المسابقة في 12 مشروع و20 طالب </p>
             </div>
         </div>
@@ -62,7 +62,7 @@
                 <img src="images/IMG-20251013-WA0115.jpg" alt="تدريب الورد ">
             </div>
             <div class="info">
-                <h3>تدريب الورد</h3>
+                <h3>تدريب Word</h3>
                 <p>في الوقت دا فضلنا كل يوم نروح المدرسة للميس تلت ايام ورا بعد وكان دا تدريب الورد</p>
             </div>
         </div>
