--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <div class="info">
                 <h3>ISEF 2024</h3>
-                <p> في المسابقة كانت مدرسة احمد زويل اكبر عدد من حيث الطلاب والمشاريع كانت مدرسة احمد زويل مشاركه في المسابقة في 12 مشروع و20 طالب </p>
+                <p> في المسابقة كانت مدرسة احمد زويل اكبر عدد من حيث الطلاب والمشاريع كانت مدرسة احمد زويل مشاركه في المسابقة بي 12 مشروع و20 طالب </p>
             </div>
         </div>
 
@@ -63,7 +63,7 @@
             </div>
             <div class="info">
                 <h3>تدريب Word</h3>
-                <p>في الوقت دا فضلنا كل يوم نروح المدرسة للميس تلت ايام ورا بعد وكان دا تدريب الورد</p>
+                <p>في الوقت دا فضلنا كل يوم نروح المدرسة للميس تلت ايام ورا بعد وكان دا تدريب Word</p>
             </div>
         </div>
 
@@ -75,7 +75,7 @@
             </div>
             <div class="info">
                 <h3>Surprise Party 1</h3>
-                <p>هنا كنا قبل امتحانات اخر الترم الاول بي شويه صغيرين  وجربات الطابلت جت متأخرة وحصل مشاكل كتير والميس كانت مضغوطه ومضايقة جماعة التطوير معدوش الموضوع ببساطة عمله جروب مخصوص عشان يخططه ازاي يخرجه الميس من المود دا وجمعه اكتر الطلبة اليي الميس بتحبهم من الدفعات الحاليه والقديمة </p>
+                <p>هنا كنا قبل امتحانات اخر الترم الاول بي شويه صغيرين  وجربات التابلت جت متأخرة وحصل مشاكل كتير والميس كانت مضغوطه ومضايقة جماعة التطوير معدوش الموضوع ببساطة عمله جروب مخصوص عشان يخططه ازاي يخرجه الميس من المود دا وجمعه اكتر الطلبة اليي الميس بتحبهم من الدفعات الحاليه والقديمة </p>
             </div>
         </div>
 
