--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="info">
                 <h3>تدريب الشاشات الذكية</h3>
-                <p>اتعلمنا في اليوم دا كيفية استخدام الشاشة بالطريقة الصحيحة والتعالم مع اعطالها وتنبيه المدريسين من الاخطاء التي يقومه بها اثناء استخدامها</p>
+                <p>اتعلمنا في اليوم دا كيفية استخدام الشاشة بالطريقة الصحيحة و التعامل مع اعطالها وتنبيه المدرسين من الاخطاء التي يقومه بها اثناء استخدامها</p>
             </div>
         </div>
 
@@ -63,7 +63,7 @@
             </div>
             <div class="info">
                 <h3>تدريب Word</h3>
-                <p>في الوقت دا فضلنا كل يوم نروح المدرسة للميس تلت ايام ورا بعد وكان دا تدريب Word</p>
+                <p>في اليوم ده الميس كانت عايزة تدربنا على استعمال Word و Excel و طلبت أننا نروح لها ثلاثة ايام علشان تعلمنا نستعملهم صح</p>     
             </div>
         </div>
 
@@ -75,7 +75,7 @@
             </div>
             <div class="info">
                 <h3>Surprise Party 1</h3>
-                <p>هنا كنا قبل امتحانات اخر الترم الاول بي شويه صغيرين  وجربات التابلت جت متأخرة وحصل مشاكل كتير والميس كانت مضغوطه ومضايقة جماعة التطوير معدوش الموضوع ببساطة عمله جروب مخصوص عشان يخططه ازاي يخرجه الميس من المود دا وجمعه اكتر الطلبة اليي الميس بتحبهم من الدفعات الحاليه والقديمة </p>
+                <p>هنا كنا قبل امتحانات اخر الترم الاول بي شويه صغيرين  وجربات التابلت جت متأخرة وحصل مشاكل كتير والميس كانت مضغوطه ومضايقة جماعة التطوير معدوش الموضوع ببساطة عمله جروب مخصوص عشان يفكره ازاي يخرجوا الميس من المود دا وجمعوا اكتر الطلبة الي الميس بتحبهم من الدفعات الحاليه والقديمة </p>
             </div>
         </div>
 
