--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="info">
                 <h3>تدريب الشاشات الذكية</h3>
-                <p>اتعلمنا في اليوم دا كيفية استخدام الشاشة بالطريقة الصحيحة و التعامل مع اعطالها وتنبيه المدرسين من الاخطاء التي يقومه بها اثناء استخدامها</p>
+                <p>اتعلمنا في اليوم دا كيفية استخدام الشاشة بالطريقة الصحيحة و التعامل مع اعطالها وتنبيه المدرسين من الاخطاء اللي بيعملوها اثناء استخدامها</p>
             </div>
         </div>
 
