--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <div class="info">
                 <h3>ISEF 2024</h3>
-                <p> في المسابقة كانت مدرسة احمد زويل اكبر عدد من حيث الطلاب والمشاريع كانت مدرسة احمد زويل مشاركه في المسابقة بي 12 مشروع و20 طالب </p>
+                <p> في المسابقة كانت مدرسة احمد زويل اكبر عدد من حيث الطلاب والمشاريع كانت مدرسة احمد زويل مشاركه في المسابقة ب 12 مشروع و20 طالب </p>
             </div>
         </div>
 
@@ -75,7 +75,7 @@
             </div>
             <div class="info">
                 <h3>Surprise Party 1</h3>
-                <p>هنا كنا قبل امتحانات اخر الترم الاول بي شويه صغيرين  وجربات التابلت جت متأخرة وحصل مشاكل كتير والميس كانت مضغوطه ومضايقة جماعة التطوير معدوش الموضوع ببساطة عمله جروب مخصوص عشان يفكره ازاي يخرجوا الميس من المود دا وجمعوا اكتر الطلبة الي الميس بتحبهم من الدفعات الحاليه والقديمة </p>
+                <p>هنا كنا قبل امتحانات اخر الترم الاول بي شويه صغيرين  وجربات التابلت جت متأخرة وحصل مشاكل كتير والميس كانت مضغوطه ومضايقة جماعة التطوير معدوش الموضوع ببساطة عمله جروب مخصوص عشان يفكره ازاي يخرجوا الميس من المود دا وجمعوا اكتر الطلبة اللي الميس بتحبهم من الدفعات الحاليه والقديمة </p>
             </div>
         </div>
 
@@ -159,7 +159,7 @@
 
 
 <footer class="footer">
-    <p>copyrigths @  <span>جماعة التطوير التكنولوجي</span></p>
+    <p>Copyrights @  <span>جماعة التطوير التكنولوجي</span></p>
             
 
 
