--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
  <!-- شاشة البداية (الانترو) -->
   <div id="intro">
     <img src="images/LOGO.png" alt="شعار جماعة التطوير" class="intro-logo">
+      <h2 class="teacher-name">إشراف: ميس ياسمين خليل</h2>
+
   </div>
 
   <script>
