--- a/index.html
+++ b/index.html
@@ -98,6 +98,31 @@
         </div>
 
 
+
+        <div class="card">
+            <div class="images">
+                <img src="images/IMG-20251104-WA0027.jpg" alt="يوم الايسف ">
+                <img src="images/IMG-20251104-WA0034.jpg" alt="يوم الايسف ">
+                <img src="images/IMG-20251104-WA0037.jpg" alt="يوم الايسف ">
+            </div>
+            <div class="info">
+                <h3>ISEF 2025</h3>
+                <p>  وبرده السنه دي  في المسابقة كانت مدرسة احمد زويل اكبر عدد من حيث الطلاب والمشاريع كانت مدرسة احمد زويل مشاركه في المسابقة ب 20 مشروع كنا احنا زويل نص المعرض عملنا دوشه وتسقيف وتصفير   </p>
+            </div>
+        </div>
+
+
+        <div class="card">
+            <div class="images">
+                <img src="images/IMG-20251020-WA0082.jpg" alt="Surprise Party 2 ">
+                <img src="images/IMG-20251020-WA0081.jpg" alt="Surprise Party 2 ">
+            </div>
+            <div class="info">
+                <h3>Surprise Party 2</h3>
+                <p> المره دي بقي كان عيد ميلاد ميس ياسمين وميس اميرة  جمعنا  بعض تاني زي المره الاولي وفضلنا شهر نفكر هنعمل ايه والحمد لله كان يوم ميتنسيش وبرده جمعنا اكتر الطلبة اللي الميس بتحبهم من الدفعات الحاليه والقديمة </p>
+            </div>
+        </div>
+
     </div>
 </section>
 
@@ -144,9 +169,47 @@
             <img src="images/WhatsApp Image 2025-10-16 at 16.47.04_2abc062e.jpg" alt="جماعةالتطوير>">
         </div>
 
+        <div class="photo-item">
+            <img src="images/WhatsApp Image 2025-10-29 at 21.49.55_0fad03c1.jpg" alt="جماعةالتطوير>">
+        </div>
+
+        <div class="photo-item">
+            <img src="images/IMG-20251104-WA0085.jpg" alt="جماعةالتطوير>">
+        </div>
+
+        <div class="photo-item">
+            <img src="images/IMG-20251104-WA0023.jpg" alt="جماعةالتطوير>">
+        </div>
+
+        <div class="photo-item">
+            <img src="images/IMG-20251102-WA00151.jpg" alt="جماعةالتطوير>">
+        </div>
+
+        <div class="photo-item">
+            <img src="images/IMG-20251104-WA0020.jpg" alt="جماعةالتطوير>">
+        </div>
+
+        <div class="photo-item">
+            <img src="images/IMG-20251104-WA0042.jpg" alt="جماعةالتطوير>">
+        </div>
+
+        <div class="photo-item">
+            <img src="images/IMG-20251104-WA0032.jpg" alt="جماعةالتطوير>">
+        </div>
+
+        <div class="photo-item">
+            <img src="images/IMG-20251020-WA0081.jpg" alt="جماعةالتطوير>">
+        </div>
+
+        <div class="photo-item">
+            <img src="images/IMG-20251020-WA0080.jpg" alt="جماعةالتطوير>">
+        </div>
 </section>
 
-
+          <video width="320" height="240" controls >
+           <source src="images/WhatsApp Video 2025-11-04 at 18.41.16_4d5198be.mp4" type="video/mp4">
+           Your browser does not support the video tag.
+          </video>
 
 
 <section class="testimonials" id="كلمة من الجماعة">
