--- a/index.html
+++ b/index.html
@@ -241,7 +241,11 @@
 
 <footer class="footer">
     <p>Copyrights @  <span>جماعة التطوير التكنولوجي</span></p>
-            
+    <!DOCTYPE html>
+
+  <p> <a href="https://wa.me/01002739932"> contact us</a></p>
+</footer>
+
 
 
 </body>
