--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     <p>Copyrights @  <span>جماعة التطوير التكنولوجي</span></p>
     <!DOCTYPE html>
 
-  <p> <a href="https://wa.me/01002739932"> contact us</a></p>
+  <p> <a href="https://wa.me/+2001002739932" target="_blank"> contact us </a></p>
 </footer>
 
 
